objects/amazonconnect__Call_Campaign__c.object
<CustomObject>
    <description>Object for call campaigns using Salesforce Omni for routing to an agent and Amazon Connect for automatic outbound calling.</description>
    <fields>
        <fullName>amazonconnect__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Campaigns</relationshipLabel>
        <relationshipName>Call_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Amazon Connect Call Campaigns</relationshipLabel>
        <relationshipName>Amazon_Connect_Call_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Campaigns</relationshipLabel>
        <relationshipName>Call_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Call Campaigns</relationshipLabel>
        <relationshipName>Call_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Call Campaigns</relationshipLabel>
        <relationshipName>Call_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Amazon Connect Call Campaign</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Call Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amazon Connect Call Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>